[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.33.0", features = ["full"] }
a2 = "0.8.0"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["client", "http2", "tcp"] }
